--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -963,9 +963,131 @@ Also, inference efficiency may be compromised for better generation quality with
 
 </td></tr></table>
 
-## 5·Results: 结果
+## 5·Analysis of Discrete Speech Tokens
+
+### Metrics and Existing Benchmarks
 
 <table><tr><td width="50%">
+
+
+Discrete speech tokens can be evaluated from various aspects besides bitrate and codebook utilization:
+
+- \textbf{Signal-level reconstruction metrics}:
+For reconstruction evaluations, signal-level metrics like
+PESQ, STOI, mel distance, GPE, etc. are often used.
+- \textbf{Perceptual reconstruction metrics}: Apart from  signal-level metrics, there can also be perceptual evaluations of reconstruction performance. This includes intelligibility (often measured by WER, CER, or phone error rates), speaker similarity, subjective or proxy MOS tests, etc.
+- \textbf{Performance on downstream tasks}: Probing tasks can be used to measure the preservation or prominence of certain information in tokens, like ASR, ASV, emotion recognition, and spoken language modeling~\cite{nguyen2020zero}.
+Note that this is different from perceptual reconstruction metrics since it operates directly on tokens.
+Performance in generative tasks like TTS and VC can also be evaluated.
+- \textbf{Semantic/phonetic relevance}: If the tokens are expected to align with texts (e.g. for semantic tokens and semantic-distilled acoustic tokens), metrics like phone discrminability~\cite{nguyen2020zero}, phone purity, and phone-normalized mutual information~\cite{hsu2021hubert} can be computed.
+- \textbf{Invariance and robustness}: If the tokens are expected to be invariant to perturbations, unit edit distance~\cite{gat2023augmentation} can be considered as a measurement.
+
+There are several existing benchmarks on discrete speech tokens.
+Codec-SUPERB\footnote{\scriptsize\url{https://codecsuperb.com/}}~\cite{wu2024codec} evaluates both signal-level reconstruction metrics and downstream performances of acoustic tokens.
+ESPnet-Codec~\cite{shi2024espnet} integrates multiple codecs into a unified training and evaluation framework VERSA~\cite{shi2024versa} and extends evaluation to some generative tasks such as TTS and SVS.
+DASB\footnote{\scriptsize\url{https://github.com/speechbrain/benchmarks/tree/main/benchmarks/DASB}}~\cite{mousavi2024dasb} performs more downstream probing tasks, and includes generative tasks as well as semantic tokens.
+STAB~\cite{vashishth2024stab} takes a different perspective that measures the invariance, robustness, compressibility, and vocabulary utilization of speech tokens.
+This emphasizes the application in spoken language models instead of reconstruction.
+
+</td><td>
+
+</td></tr></table>
+
+### Existing Analyses
+
+<table><tr><td width="50%">
+
+There are several theoretical or experimental analyses of the advantages of discrete speech tokens.
+Nguyen et al.~\cite{nguyen2022discrete} demonstrates by an encoder-only language model that semantic SSL tokens are favorable for spoken language modeling, due to their removal of linguistically irrelevant information.
+Sicherman et al.~\cite{sicherman2023analysing} supports this claim by showing that semantic units have a strong correlation with phonemes, but a weaker correlation with speakers.
+Abdullah et al.~\cite{abdullah23_interspeech} refines the correlation between semantic SSL tokens and linguistic content to the ``sub-phonemic'' level instead of high-level phonemes due to contextual variability.
+Chang et al.~\cite{chang23b_interspeech} explores the use of WavLM tokens for end-to-end ASR together with deduplication and BPE. Although these tokens underperform continuous SSL features, they still show competitive performance.
+Similar findings are reported on contextual ASR~\cite{cui2024exploring_context}, multilingual ASR~\cite{cui2024exploring}, end-to-end speech translation,
+understanding~\cite{chang2024exploring}, and more LLM-based semantic-related tasks with discrete units as inputs~\cite{wang2024comparative}.
+Expresso~\cite{expresso}  evaluates the resynthesis quality of HuBERT and EnCodec tokens on an expressive dataset, finding that HuBERT struggles to preserve source speech expressivity while EnCodec performs better.
+
+The downside of speech tokens is also researched.
+Yeh et al.~\cite{yeh2024estimating} suggests that VQ on HuBERT embeddings cannot achieve perfect disentanglement of speaker and phonetic content.
+EMO-Codec~\cite{ren2024emo} shows that codec reconstruction still sometimes degrades the emotion information.
+O'Reilly et al.~\cite{o2024code} shows that neural audio codecs often lack stability after repeated encoding and decoding, i.e. not idempotent.
+
+Therefore, the reconstruction quality of acoustic tokens and the performance on discriminative downstream tasks of both acoustic and semantic tokens have been well benchmarked.
+However, the reconstruction performance of semantic tokens still requires a more thorough comparison.
+Hence, we adopt a reconstruction approach to compare different types of tokens.
+Specifically, we use a timbre-controllable speech token vocoder to resynthesize semantic tokens into waveforms and measure the preservation of content, prosody, speaker identity, and acoustic details, respectively. The details and results of these experiments will be elaborated in the rest of this chapter.
+
+</td><td>
+
+</td></tr></table>
+
+### Reconstruction Analysis
+
+<table><tr><td width="50%">
+
+To enable a fair comparison between acoustic and semantic tokens from a reconstruction perspective, we train a CTX-vec2wav$^\alpha$ vocoder~\cite{guo2024lscodec} for different semantic tokens on LibriTTS~\cite{libritts}.
+This vocoder supplements the insufficient speaker timbre information in semantic tokens using continuous WavLM features extracted from the reference prompts.
+This approach enables semantic tokens to perform voice conversion (VC) by switching reference prompts conveniently.
+The training details follow \cite{du2024unicats}.
+We compute several metrics for reconstruction ability:
+
+- \textbf{WER} (word error rate, in percentage) measures the content intelligibility of reconstructed speech. It is computed between ground truth texts and ASR-decoded transcriptions. We use NeMo-ASR\footnote{\scriptsize\url{https://huggingface.co/nvidia/stt_en_fastconformer_transducer_large}} here.
+- \textbf{GPE} (gross pitch error, in percentage) measures the relative error percentage of pitch contours of the reconstructed speech compared to ground truth.
+- \textbf{PESQ} (perceptual evaluation of speech quality) and \textbf{STOI} (short-time objective intelligibility) measure the speech quality from a signal perspective.
+- \textbf{SECS} (speaker embedding cosine similarity) computes the cosine similarity of speaker embeddings outputted from a speaker verification model\footnote{\scriptsize\url{https://github.com/resemble-ai/Resemblyzer}}.
+
+We use LibriTTS testset-B~ \cite{du2024unicats} as the test set for evaluations.
+It contains 500 utterances from unseen speakers that sum up to about 1 hour.
+We use the original utterance to provide timbre information when necessary, i.e. for TiCodec, FACodec, LSCodec and all semantic tokens\footnote{Note that there is potential of information leakage in this situation. An alternative strategy is to use a reference prompt from the same speaker to provide timbre information, then compute similarity between the generated utterance and the reference.
+However, this is rather ``same-speaker conversion'' instead of reconstruction, and the SECS values are not comparable to ordinary acoustic tokens that don't require additional speaker inputs.}.
+All evaluation metrics are computed on 16kHz waveform for a fair comparison, and reconstructed waveforms with higher sampling rates are downsampled before evaluation.
+
+We take representative works in each token category.
+When there are multiple feasible configurations for a model, we choose one typical configuration that balances bitrate and performance.
+Note that different variants (especially on frame rate and number of quantizers) within the same model can lead to significant differences in reported metrics.
+For SSL models like wav2vec 2.0, HuBERT and WavLM, we take the official ``Large'' model variant.
+For wav2vec 2.0, we experiment with both its inner quantizer before the Transformer blocks and k-means clustering results on a specific Transformer layer.
+
+The results are shown in Table \ref{tab:recon-vc}.
+It is evident that acoustic tokens designed only for reconstruction can achieve decent speech quality, but still far from the state-of-the-art spectrogram-based vocoders because of higher compression rates.
+Retaining good speech intelligibility (i.e. low WER) becomes particularly challenging when the frame rate is low.
+Acoustic tokens with semantic distillation can also achieve strong reconstruction quality.
+Explicitly disentangled acoustic tokens may sacrifice some reconstruction performance metrics when the bitrate is extremely low.
+Semantic tokens generally struggle to achieve the same level of acoustic reconstruction as acoustic tokens, as evidenced by lower GPE, PESQ, and STOI scores.
+Notably, most semantic tokens included exhibit significant information loss in prosody as reflected by their GPE scores.
+However, their WER scores remain comparable to acoustic tokens, despite having much lower bitrates.
+This highlights the property that semantic tokens primarily retain content-related information rather than acoustic details.
+
+</td><td>
+
+</td></tr></table>
+
+### Voice Conversion Analysis
+
+<table><tr><td width="50%">
+
+Despite the loss of acoustic information, a prominent advantage of semantic tokens over most acoustic tokens is their inherent timbre controllability.
+Some acoustic tokens also have this ability, such as those with a global encoder like TiCodec and disentangled acoustic tokens, also possess this ability
+To compare this ability across different tokens, we conduct voice conversion (VC) experiments using these tokens as the content from the source speech.
+We use the same source utterances in Section \ref{sec:reconstruction}, but assign a different target speaker for each source utterance as the prompt.
+Then, we perform VC experiments on the 500 VC pairs.
+In addition to WER and SECS, we also measure \textbf{P.Corr} as an objective metric for prosody preservation.
+This calculates the Pearson correlation coefficient between the pitch contours of the converted and source utterances.
+Note that this metric will be meaninglessly high if the VC similarity is low, i.e., when the source timbre is barely changed.
+As the source utterances are the same as Section \ref{sec:reconstruction}, the WER numbers are directly comparable to those in the reconstruction experiments.
+
+The results presented in Table \ref{tab:recon-vc} indicate that semantic tokens often achieve much higher VC similarity compared to acoustic tokens.
+However, due to the substantial loss of prosody information, semantic tokens tend to have lower P.Corr scores than acoustic tokens.
+Among the acoustic tokens capable of performing VC, explicit disentanglement methods, such as FACodec and LSCodec, outperform the implicit criterion employed in TiCodec.
+It is also noteworthy that different tokenization settings in wav2vec 2.0 lead to drastically different outcomes.
+Tokens generated from its inner quantizer preserve prosody well but also retain much speaker information, whereas clusters derived from its Transformer hidden embeddings exhibit the opposite characteristics.
+
+Supervised semantic tokens from $\mathcal S^3$ Tokenizer also exhibit good intelligibility and VC ability.
+Unlike HuBERT-style SSL models, this supervised tokenizer demonstrates better preservation of prosody both in reconstruction and VC settings.
+Given that prosody and intonation are a crucial factors for ASR, it is reasonable to assume that the tokenizer's VQ module encodes some prosody information.
+In contrast, while HuBERT-style SSL models do contain rich prosody information in their continuous features (e.g., as evidenced by good emotion recognition results~\cite{superb}), phonetic information is likely the primary component.
+Therefore, offline clustering is prone to discard these prosody characteristics.
+
+</td><td>
 
 </td></tr></table>
 
