--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -138,8 +138,10 @@ A quantization process $q$ transforms $\bm x$ into a discrete \textit{token} in 
 The output tokens are sometimes referred to as \textit{indexes} in the finite $V$-cardinal set.
 The function $q$ is usually associated with a \textit{codebook} $\mathcal C=\{\bm c_1,\bm c_2,...,\bm c_V\}$ where every \textit{code-vector} $\bm c_i\in\mathbb R^d$ corresponds to the $i$-th token.
 The code-vectors are representations of tokens in the original $d$-dimensional space.
-As $V$ elements can be encoded using $\lceil \log_2 V\rceil$ raw bits\footnote{We use $\lceil z\rceil$ to denote the ceiling of a scalar $z$, i.e., the smallest integer greater than or equal to $z$.
-Similarly, $\lfloor z\rfloor$ denotes the floor of $z$, i.e., the largest integer less than or equal to $z$.}, quantization often compresses the cost for data storage and transmission to a great extent.
+As $V$ elements can be encoded using $\lceil \log_2 V\rceil$ raw bits, quantization often compresses the cost for data storage and transmission to a great extent.
+
+We use $\lceil z\rceil$ to denote the ceiling of a scalar $z$, i.e., the smallest integer greater than or equal to $z$.
+Similarly, $\lfloor z\rfloor$ denotes the floor of $z$, i.e., the largest integer less than or equal to $z$.
 
 </td><td>
 
@@ -248,13 +250,17 @@ $$
     q\left(\bm x^{(i)}\right)=\operatorname{round}\left(\lfloor L/2\rfloor\tanh\left(\bm x^{(i)}\right)\right).
 $$
 
-The quantized values are thus integers ranging from $-\lfloor L/2 \rfloor$ to $\lfloor L/2 \rfloor$\footnote{Following [^mentzer2024finite], this is the symmetric case for $L$ being odd.
-When $L$ is even, there is an offset before rounding to obtain asymmetric quantized values.}.
+The quantized values are thus integers ranging from $-\lfloor L/2 \rfloor$ to $\lfloor L/2 \rfloor$.
+Following [^mentzer2024finite], this is the symmetric case for $L$ being odd.
+When $L$ is even, there is an offset before rounding to obtain asymmetric quantized values.
+
 For a $d$-dimensional vector $\bm x$, there are $L^d$ possible quantization outcomes.
 Hence, FSQ usually requires a much smaller hidden dimension than VQ.
 STE is applied to pass gradients.
 As quantization is simply done via rounding to integers, there is no explicit codebooks associated with the FSQ process.
-FSQ is reported to have  better codebook usage\footnote{Although there is no longer a codebook associated with code-vectors, codebook usage can still be measured among all possible $V=L^d$ outcomes.} especially for a large $V$ compared to VQ methods, without the need for auxiliary losses.
+FSQ is reported to have  better codebook usage, especially for a large $V$ compared to VQ methods, without the need for auxiliary losses.
+
+Although there is no longer a codebook associated with code-vectors, codebook usage can still be measured among all possible $V=L^d$ outcomes.
 
 </td><td>
 
@@ -879,7 +885,8 @@ Since the encoded continuous features are often close in consecutive frames wher
 Therefore, removing these redundant tokens can yield a more phonetic representation.
 When the deduplicated tokens are used for generative modeling, a unit-to-speech model (similar to TTS) should be employed to upsample the tokens and convert them back to acoustic signals[^lakhotia2021generative].
 
-Another popular approach to reducing the length of speech token sequences is acoustic byte-pair encoding (BPE)\footnote{The term "acoustic" here is used to distinguish it from traditional BPE applied to text tokens, rather than referring to "acoustic tokens".} or so-called subword modeling[^hayashi2020discretalk], [^ren22_interspeech], [^chang23b_interspeech], [^shen2024acoustic], [^dekel24_interspeech].
+Another popular approach to reducing the length of speech token sequences is acoustic byte-pair encoding (BPE) or so-called subword modeling[^hayashi2020discretalk], [^ren22_interspeech], [^chang23b_interspeech], [^shen2024acoustic], [^dekel24_interspeech].
+The term "acoustic" here is used to distinguish it from traditional BPE applied to text tokens, rather than referring to "acoustic tokens".
 Similar to text BPE[^Gage1994ANA], acoustic BPE iteratively merges the two most frequent consecutive tokens and adds the merged token to the vocabulary.
 After training on a corpus, a deterministic BPE mapping is established between original token combinations and the new vocabulary.
 This mapping enables a lossless compression algorithm, allowing tokens to be perfectly reconstructed after BPE decoding.
@@ -976,17 +983,17 @@ Discrete speech tokens can be evaluated from various aspects besides bitrate and
 For reconstruction evaluations, signal-level metrics like
 PESQ, STOI, mel distance, GPE, etc. are often used.
 - \textbf{Perceptual reconstruction metrics}: Apart from  signal-level metrics, there can also be perceptual evaluations of reconstruction performance. This includes intelligibility (often measured by WER, CER, or phone error rates), speaker similarity, subjective or proxy MOS tests, etc.
-- \textbf{Performance on downstream tasks}: Probing tasks can be used to measure the preservation or prominence of certain information in tokens, like ASR, ASV, emotion recognition, and spoken language modeling~\cite{nguyen2020zero}.
+- \textbf{Performance on downstream tasks}: Probing tasks can be used to measure the preservation or prominence of certain information in tokens, like ASR, ASV, emotion recognition, and spoken language modeling[^nguyen2020zero].
 Note that this is different from perceptual reconstruction metrics since it operates directly on tokens.
 Performance in generative tasks like TTS and VC can also be evaluated.
-- \textbf{Semantic/phonetic relevance}: If the tokens are expected to align with texts (e.g. for semantic tokens and semantic-distilled acoustic tokens), metrics like phone discrminability~\cite{nguyen2020zero}, phone purity, and phone-normalized mutual information~\cite{hsu2021hubert} can be computed.
-- \textbf{Invariance and robustness}: If the tokens are expected to be invariant to perturbations, unit edit distance~\cite{gat2023augmentation} can be considered as a measurement.
+- \textbf{Semantic/phonetic relevance}: If the tokens are expected to align with texts (e.g. for semantic tokens and semantic-distilled acoustic tokens), metrics like phone discrminability[^nguyen2020zero], phone purity, and phone-normalized mutual information[^hsu2021hubert] can be computed.
+- \textbf{Invariance and robustness}: If the tokens are expected to be invariant to perturbations, unit edit distance[^gat2023augmentation] can be considered as a measurement.
 
 There are several existing benchmarks on discrete speech tokens.
-Codec-SUPERB\footnote{\scriptsize\url{https://codecsuperb.com/}}~\cite{wu2024codec} evaluates both signal-level reconstruction metrics and downstream performances of acoustic tokens.
-ESPnet-Codec~\cite{shi2024espnet} integrates multiple codecs into a unified training and evaluation framework VERSA~\cite{shi2024versa} and extends evaluation to some generative tasks such as TTS and SVS.
-DASB\footnote{\scriptsize\url{https://github.com/speechbrain/benchmarks/tree/main/benchmarks/DASB}}~\cite{mousavi2024dasb} performs more downstream probing tasks, and includes generative tasks as well as semantic tokens.
-STAB~\cite{vashishth2024stab} takes a different perspective that measures the invariance, robustness, compressibility, and vocabulary utilization of speech tokens.
+Codec-SUPERB[^wu2024codec] [URL](https://codecsuperb.com/) evaluates both signal-level reconstruction metrics and downstream performances of acoustic tokens.
+ESPnet-Codec[^shi2024espnet] integrates multiple codecs into a unified training and evaluation framework VERSA[^shi2024versa] and extends evaluation to some generative tasks such as TTS and SVS.
+DASB[^mousavi2024dasb] [URL](https://github.com/speechbrain/benchmarks/tree/main/benchmarks/DASB) performs more downstream probing tasks, and includes generative tasks as well as semantic tokens.
+STAB[^vashishth2024stab] takes a different perspective that measures the invariance, robustness, compressibility, and vocabulary utilization of speech tokens.
 This emphasizes the application in spoken language models instead of reconstruction.
 
 </td><td>
@@ -998,18 +1005,18 @@ This emphasizes the application in spoken language models instead of reconstruct
 <table><tr><td width="50%">
 
 There are several theoretical or experimental analyses of the advantages of discrete speech tokens.
-Nguyen et al.~\cite{nguyen2022discrete} demonstrates by an encoder-only language model that semantic SSL tokens are favorable for spoken language modeling, due to their removal of linguistically irrelevant information.
-Sicherman et al.~\cite{sicherman2023analysing} supports this claim by showing that semantic units have a strong correlation with phonemes, but a weaker correlation with speakers.
-Abdullah et al.~\cite{abdullah23_interspeech} refines the correlation between semantic SSL tokens and linguistic content to the ``sub-phonemic'' level instead of high-level phonemes due to contextual variability.
-Chang et al.~\cite{chang23b_interspeech} explores the use of WavLM tokens for end-to-end ASR together with deduplication and BPE. Although these tokens underperform continuous SSL features, they still show competitive performance.
-Similar findings are reported on contextual ASR~\cite{cui2024exploring_context}, multilingual ASR~\cite{cui2024exploring}, end-to-end speech translation,
-understanding~\cite{chang2024exploring}, and more LLM-based semantic-related tasks with discrete units as inputs~\cite{wang2024comparative}.
-Expresso~\cite{expresso}  evaluates the resynthesis quality of HuBERT and EnCodec tokens on an expressive dataset, finding that HuBERT struggles to preserve source speech expressivity while EnCodec performs better.
+Nguyen et al.[^nguyen2022discrete] demonstrates by an encoder-only language model that semantic SSL tokens are favorable for spoken language modeling, due to their removal of linguistically irrelevant information.
+Sicherman et al.[^sicherman2023analysing] supports this claim by showing that semantic units have a strong correlation with phonemes, but a weaker correlation with speakers.
+Abdullah et al.[^abdullah23_interspeech] refines the correlation between semantic SSL tokens and linguistic content to the "sub-phonemic" level instead of high-level phonemes due to contextual variability.
+Chang et al.[^chang23b_interspeech] explores the use of WavLM tokens for end-to-end ASR together with deduplication and BPE. Although these tokens underperform continuous SSL features, they still show competitive performance.
+Similar findings are reported on contextual ASR[^cui2024exploring_context], multilingual ASR[^cui2024exploring], end-to-end speech translation,
+understanding[^chang2024exploring], and more LLM-based semantic-related tasks with discrete units as inputs[^wang2024comparative].
+Expresso[^expresso]  evaluates the resynthesis quality of HuBERT and EnCodec tokens on an expressive dataset, finding that HuBERT struggles to preserve source speech expressivity while EnCodec performs better.
 
 The downside of speech tokens is also researched.
-Yeh et al.~\cite{yeh2024estimating} suggests that VQ on HuBERT embeddings cannot achieve perfect disentanglement of speaker and phonetic content.
-EMO-Codec~\cite{ren2024emo} shows that codec reconstruction still sometimes degrades the emotion information.
-O'Reilly et al.~\cite{o2024code} shows that neural audio codecs often lack stability after repeated encoding and decoding, i.e. not idempotent.
+Yeh et al.[^yeh2024estimating] suggests that VQ on HuBERT embeddings cannot achieve perfect disentanglement of speaker and phonetic content.
+EMO-Codec[^ren2024emo] shows that codec reconstruction still sometimes degrades the emotion information.
+O'Reilly et al.[^o2024code] shows that neural audio codecs often lack stability after repeated encoding and decoding, i.e. not idempotent.
 
 Therefore, the reconstruction quality of acoustic tokens and the performance on discriminative downstream tasks of both acoustic and semantic tokens have been well benchmarked.
 However, the reconstruction performance of semantic tokens still requires a more thorough comparison.
@@ -1024,27 +1031,30 @@ Specifically, we use a timbre-controllable speech token vocoder to resynthesize 
 
 <table><tr><td width="50%">
 
-To enable a fair comparison between acoustic and semantic tokens from a reconstruction perspective, we train a CTX-vec2wav$^\alpha$ vocoder~\cite{guo2024lscodec} for different semantic tokens on LibriTTS~\cite{libritts}.
+To enable a fair comparison between acoustic and semantic tokens from a reconstruction perspective, we train a CTX-vec2wav$^\alpha$ vocoder[^guo2024lscodec] for different semantic tokens on LibriTTS[^libritts].
 This vocoder supplements the insufficient speaker timbre information in semantic tokens using continuous WavLM features extracted from the reference prompts.
 This approach enables semantic tokens to perform voice conversion (VC) by switching reference prompts conveniently.
-The training details follow \cite{du2024unicats}.
+The training details follow [^du2024unicats].
 We compute several metrics for reconstruction ability:
 
-- \textbf{WER} (word error rate, in percentage) measures the content intelligibility of reconstructed speech. It is computed between ground truth texts and ASR-decoded transcriptions. We use NeMo-ASR\footnote{\scriptsize\url{https://huggingface.co/nvidia/stt_en_fastconformer_transducer_large}} here.
+- \textbf{WER} (word error rate, in percentage) measures the content intelligibility of reconstructed speech. It is computed between ground truth texts and ASR-decoded transcriptions. We use NeMo-ASR [URL](https://huggingface.co/nvidia/stt_en_fastconformer_transducer_large) here.
 - \textbf{GPE} (gross pitch error, in percentage) measures the relative error percentage of pitch contours of the reconstructed speech compared to ground truth.
 - \textbf{PESQ} (perceptual evaluation of speech quality) and \textbf{STOI} (short-time objective intelligibility) measure the speech quality from a signal perspective.
-- \textbf{SECS} (speaker embedding cosine similarity) computes the cosine similarity of speaker embeddings outputted from a speaker verification model\footnote{\scriptsize\url{https://github.com/resemble-ai/Resemblyzer}}.
+- \textbf{SECS} (speaker embedding cosine similarity) computes the cosine similarity of speaker embeddings outputted from a speaker verification model [URL](https://github.com/resemble-ai/Resemblyzer).
 
-We use LibriTTS testset-B~ \cite{du2024unicats} as the test set for evaluations.
+We use LibriTTS testset-B~ [^du2024unicats] as the test set for evaluations.
 It contains 500 utterances from unseen speakers that sum up to about 1 hour.
-We use the original utterance to provide timbre information when necessary, i.e. for TiCodec, FACodec, LSCodec and all semantic tokens\footnote{Note that there is potential of information leakage in this situation. An alternative strategy is to use a reference prompt from the same speaker to provide timbre information, then compute similarity between the generated utterance and the reference.
-However, this is rather ``same-speaker conversion'' instead of reconstruction, and the SECS values are not comparable to ordinary acoustic tokens that don't require additional speaker inputs.}.
+We use the original utterance to provide timbre information when necessary, i.e. for TiCodec, FACodec, LSCodec and all semantic tokens.
+
+Note that there is potential of information leakage in this situation. An alternative strategy is to use a reference prompt from the same speaker to provide timbre information, then compute similarity between the generated utterance and the reference.
+However, this is rather "same-speaker conversion" instead of reconstruction, and the SECS values are not comparable to ordinary acoustic tokens that don't require additional speaker inputs.
+
 All evaluation metrics are computed on 16kHz waveform for a fair comparison, and reconstructed waveforms with higher sampling rates are downsampled before evaluation.
 
 We take representative works in each token category.
 When there are multiple feasible configurations for a model, we choose one typical configuration that balances bitrate and performance.
 Note that different variants (especially on frame rate and number of quantizers) within the same model can lead to significant differences in reported metrics.
-For SSL models like wav2vec 2.0, HuBERT and WavLM, we take the official ``Large'' model variant.
+For SSL models like wav2vec 2.0, HuBERT and WavLM, we take the official "Large" model variant.
 For wav2vec 2.0, we experiment with both its inner quantizer before the Transformer blocks and k-means clustering results on a specific Transformer layer.
 
 The results are shown in Table \ref{tab:recon-vc}.
@@ -1084,7 +1094,7 @@ Tokens generated from its inner quantizer preserve prosody well but also retain 
 Supervised semantic tokens from $\mathcal S^3$ Tokenizer also exhibit good intelligibility and VC ability.
 Unlike HuBERT-style SSL models, this supervised tokenizer demonstrates better preservation of prosody both in reconstruction and VC settings.
 Given that prosody and intonation are a crucial factors for ASR, it is reasonable to assume that the tokenizer's VQ module encodes some prosody information.
-In contrast, while HuBERT-style SSL models do contain rich prosody information in their continuous features (e.g., as evidenced by good emotion recognition results~\cite{superb}), phonetic information is likely the primary component.
+In contrast, while HuBERT-style SSL models do contain rich prosody information in their continuous features (e.g., as evidenced by good emotion recognition results[^superb]), phonetic information is likely the primary component.
 Therefore, offline clustering is prone to discard these prosody characteristics.
 
 </td><td>
@@ -1100,6 +1110,7 @@ Therefore, offline clustering is prone to discard these prosody characteristics.
 ## References: 参考文献
 
 [^9164982]:
+[^abdullah23_interspeech]:
 [^ahn2024hilcodec]:
 [^ai24b_interspeech]:
 [^anees2024speech]:
@@ -1129,6 +1140,8 @@ Therefore, offline clustering is prone to discard these prosody characteristics.
 [^cosyvoice2]:
 [^ctc]:
 [^cuervo2022variable]:
+[^cui2024exploring]:
+[^cui2024exploring_context]:
 [^cui2024recent]:
 [^dekel24_interspeech]:
 [^dhariwal2020jukebox]:
@@ -1144,6 +1157,7 @@ Therefore, offline clustering is prone to discard these prosody characteristics.
 [^eloff19_interspeech]:
 [^encodec]:
 [^esser2021taming]:
+[^expresso]:
 [^facodec]:
 [^fang2024llamaomni]:
 [^Gage1994ANA]:
@@ -1184,6 +1198,7 @@ Therefore, offline clustering is prone to discard these prosody characteristics.
 [^lancucki2020robust]:
 [^li2024sef]:
 [^li24qa_interspeech]:
+[^libritts]:
 [^liu2024semanticodec]:
 [^LMCodec]:
 [^ma-etal-2024-emotion2vec]:
@@ -1197,9 +1212,12 @@ Therefore, offline clustering is prone to discard these prosody characteristics.
 [^mousavi2024should]:
 [^multiple-stage-vector-quantization]:
 [^nguyen2020zero]:
+[^nguyen2020zero]:
+[^nguyen2022discrete]:
 [^nguyen20_interspeech]:
 [^niekerk20b_interspeech]:
 [^niu2024ndvq]:
+[^o2024code]:
 [^park2020specaugment]:
 [^parker2024scalingtransformerslowbitratehighquality]:
 [^polyak21]:
@@ -1210,6 +1228,7 @@ Therefore, offline clustering is prone to discard these prosody characteristics.
 [^raffel2020exploring]:
 [^razavi2019generating]:
 [^ren2022prosospeech]:
+[^ren2024emo]:
 [^ren22_interspeech]:
 [^rfc5219]:
 [^rippel2014learning]:
@@ -1217,14 +1236,18 @@ Therefore, offline clustering is prone to discard these prosody characteristics.
 [^san2023discrete]:
 [^seedtts]:
 [^shen2024acoustic]:
+[^shi2024espnet]:
+[^shi2024versa]:
 [^shi24h_interspeech]:
 [^siahkoohi22_interspeech]:
+[^sicherman2023analysing]:
 [^sicherman2023analysing]:
 [^singlecodec]:
 [^siuzdak2024vocos]:
 [^Siuzdak_SNAC_Multi-Scale_Neural_2024]:
 [^song2021scorebased]:
 [^SSVC]:
+[^superb]:
 [^superb]:
 [^ticodec]:
 [^tortoise]:
@@ -1233,16 +1256,19 @@ Therefore, offline clustering is prone to discard these prosody characteristics.
 [^turetzky2024last]:
 [^Valin2012DefinitionOT]:
 [^valle]:
+[^vashishth2024stab]:
 [^vectokspeech]:
 [^vq-wav2vec]:
 [^VQTTS]:
 [^VQVAE]:
 [^wang2004image]:
+[^wang2024comparative]:
 [^wang2024maskgct]:
 [^wang2024viola]:
 [^wav2vec]:
 [^wells22_interspeech]:
 [^whisper]:
+[^wu2024codec]:
 [^wu2024towards]:
 [^wu2024ts3codectransformerbasedsimplestreaming]:
 [^wu20g_interspeech]:
