--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -1101,9 +1101,68 @@ Therefore, offline clustering is prone to discard these prosody characteristics.
 
 </td></tr></table>
 
-## 6·Conclusions: 结论
+## 6·Discrete Speech Token-based Application Paradigms
+
+### Spoken Language Understanding
+
+#### Motivation
 
 <table><tr><td width="50%">
+
+Spoken language understanding (SLU) tasks, including automatic speech recognition (ASR), speech translation, intent classification and others, aim to extract meaningful domain-specific information from speech.
+Most SLU tasks follow a speech-in text-out pipeline, except S2ST which also involves speech generation.
+The adoption of discrete tokens in SLU offers some benefits.
+Discrete tokens may naturally exhibit some invariance against noise and speaker information, particularly semantic tokens, which can make downstream models to focus more effectively on content-related information in some tasks.
+On a broader scale, discrete tokens provide a promising approach to unifying speech understanding and generation in spoken language models.
+
+As an alternative input to an SLU model instead of continuous features, discrete speech tokens are typically deduplicated or BPE-encoded before subsequent modules.
+Semantic tokens have been better explored than acoustic ones in this context.
+
+</td><td>
+
+</td></tr></table>
+
+#### Speech Translation
+
+<table><tr><td width="50%">
+
+Among the various SLU tasks, discrete speech tokens are mostly adopted in speech translation, including speech-to-text translation (S2TT) and speech-to-speech translation (S2ST).
+Since semantic tokens correlate well with phonetics, they can serve as universal pseudo-labels for untranscribed languages, useful for S2TT in low-resource settings~\cite{zhang-etal-2023-dub}.
+Direct S2ST using discrete tokens has garnered more attention on the generation side (Section \ref{sec:application-synthesis}).
+Early approaches primarily rely on extracting discrete tokens using VQ-VAEs, particularly for unwritten languages~\cite{tjandra2019speech, zhang2021uwspeech}.
+Recent researches in this area include employing semantic tokens~\cite{lee2022direct, lee-etal-2022-textless, wu2023speechgen}, acoustic tokens~\cite{peng2024mslm, wang-etal-2024-speech, gong2024seamlessexpressivelm}, two-pass architectures~\cite{chen-etal-2023-speech, inaguma-etal-2023-unity}, and non-autoregressive frameworks~\cite{huang2023transpeech}.
+These efforts collectively contribute to advancing the performance and applicability of discrete token-based speech translation systems.
+
+</td><td>
+
+</td></tr></table>
+
+#### Unified Speech Understanding
+
+<table><tr><td width="50%">
+
+Discrete tokens provide opportunity to construct unified and adaptable spoken language models with various SLU functionalities.
+Efforts include task identifies~\cite{wang2024viola}, prompt tuning~\cite{chang2022speechprompt, chang2023speechprompt, 10.1109/TASLP.2024.3436618,wu2023speechgen}, shared audio and text  vocabulary~\cite{rubenstein2023audiopalm}, and combining continuous and discrete representations~\cite{chen2023lauragpt}.
+These efforts highlight the potential of discrete tokens in enhancing the performance and versatility of universal SLU models.
+
+</td><td>
+
+</td></tr></table>
+
+#### Limitations
+
+<table><tr><td width="50%">
+
+Despite the advantages and growing popularity in S2ST tasks, discrete tokens still underperform in many SLU tasks.
+Lots of SLU studies~\cite{puvvada2024discrete, chang2024exploring, shon2024discreteslu, cui2024exploring_context, cui2024exploring} only verify that discrete tokens can surpass traditional frequency-domain features in certain tasks such as ASR.
+Continuous SSL features continue to have superior performance~\cite{wang2024comparative}.
+The majority of current LLM-based SLU models rely predominantly on continuous inputs, such as Whisper features~\cite{gong2023joint,chu2023qwen,tang2024salmonn,wavllm,ma2024embarrassingly,bai2024seed}.
+Moreover, the performance of discrete tokens in speaker-related tasks is generally much inferior to that of continuous features~\cite{puvvada2024discrete,mousavi2024dasb}.
+A significant limitation of discrete tokens for SLU is the inevitable information loss during the quantization process.
+Mitigating such loss with more VQ codebooks may hinder the accessibility of semantic information crucial for SLU as well.
+Therefore, the full potential of leveraging discrete tokens for SLU remains largely untapped and warrants further exploration.
+
+</td><td>
 
 </td></tr></table>
 
